--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -31,6 +31,7 @@
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="/static/css/custom.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/login.css"/>
     <link rel="stylesheet" type="text/css" href="/static/css/modal.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -41,15 +42,20 @@
 <a id="session" th:text="${session.values()}"> </a>
 <div id="banner" class="jumbotron text-right">
     <form action="cart" method="get">
-        <button type="shoppingCart" style="font-size:25px"><i class="fa fa-shopping-cart"></i></button>
+        <button type="shoppingCart" id="shoppingCartButton">
+            <i class="fa fa-shopping-cart" ></i>
+        </button>
     </form>
-    <form action="logout" method="post">
-        <button type="login" id="logoutButton">Logout</button>
-    </form>
+
     <div id="header-auth">
+
         <button type="bannerLoginButton" id="loginButton">Login</button>
         <button type="bannerSignUpButton" id="signUpButton">Sign Up</button>
+        <form action="logout" method="post">
+            <button type="login" id="logoutButton">Logout</button>
+        </form>
     </div>
+
 </div>
 
 
@@ -90,7 +96,7 @@
                     </div>
                     <div class="card-footer mt-auto">
                         <p class="lead" th:text="${prod.getPrice()}">100 USD</p>
-                        <a  id="cart-button" class="btn btn-success" th:attr="href='/index?product=' + ${prod.id}">
+                        <a class="btn btn-success" th:attr="href='/index?product=' + ${prod.id}">
                             <i class="bi bi-cart4"></i>
                         </a>
                     </div>
@@ -165,5 +171,7 @@
 </div>
 <script src="static/js/style.js"></script>
 <script src="static/js/user.js"></script>
+<script src="static/js/cart.js"></script>
+
 </body>
 </html>
